@@ -14,6 +14,7 @@
 - API Change: Cell no longer uses primitive wrappers in public API and boxing is minimized.
 - API Addition: TextureAttribute now supports uv transform (texture regions).
 - API Change: Added parameters to Elastic Interpolation.
+- API Change: Removed Actor#setCenterPosition, added setPosition(x,y,align).
 
 [1.3.1]
 - API change: Viewport refactoring. https://github.com/libgdx/libgdx/pull/2220
